Fix header content alignment

--- a/style.css
+++ b/style.css
@@ -1,44 +1,44 @@
 body {
     margin: 0;
-    min-height: 100vh;
     font-family: 'Roboto', sans-serif;
+}
+
+.container {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
-h2 {
-    margin: 0;
-}
-
-.one, .footer{
+.section1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #1f2937;
-    color: #F9FAF8;
+    width: 100%;
+    gap: 30px;
 }
 
-.header {
+.section1-1 {
+    width: 50%;
+}
+
+header {
     display: flex;
     align-items: center;
+}
+
+header h2 {
+    margin: 0;
 }
 
 ul {
     display: flex;
     list-style-type: none;
     margin-left: auto;
-    gap: 20px;
-}
-
-.one-left p, ul {
-    color: #E5E7EB;
-}
-
-.three {
-    background-color: #E5E7EB;
-}
-
-.footer {
-    margin-top: auto;
-    height: 80px;
-    display: flex;
+    gap: 15px;
     align-items: center;
-    justify-content: center;
+}
+
+a {
+    text-decoration: none;
 }
